# squash

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
features/: playwright.feature
tests/: debug.ts  hooks.ts  navigation.ts  world.ts
